# dolphin-emu

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  Readme.txt
Source/: CMakeLists.txt  Dolphin_2010.sln  build.all.bat  build.bat  build.debug.32.bat  build.debug.64.bat  build.debugfast.32.bat  build.debugfast.64.bat  build.proj.bat  build.release.32.bat  build.release.64.bat  clean.bat  dolphin-emu.sln  env.bat  msbuild.proj  rebuild.all.bat  rebuild.debug.32.bat  rebuild.debug.64.bat  rebuild.debugfast.32.bat  rebuild.debugfast.64.bat  rebuild.release.32.bat  rebuild.release.64.bat  shared.bat
Source/Android/assets/: Dolphin.ini
Source/Core/: CMakeLists.txt
Source/Core/AudioCommon/: AOSoundStream.cpp  AOSoundStream.h  AlsaSoundStream.cpp  AlsaSoundStream.h  AudioCommon.vcxproj  AudioCommon.vcxproj.filters  CMakeLists.txt  NullSoundStream.cpp  NullSoundStream.h  PulseAudioStream.cpp  PulseAudioStream.h  SoundStream.h
Source/Core/AudioCommon/Src/: AOSoundStream.cpp  AOSoundStream.h  AlsaSoundStream.cpp  AlsaSoundStream.h  AudioCommon.cpp  AudioCommonConfig.cpp  AudioCommonConfig.h  DSoundStream.cpp  DSoundStream.h  NullSoundStream.h  OpenALStream.cpp  OpenALStream.h  OpenSLESStream.h  PulseAudioStream.cpp  PulseAudioStream.h  SoundStream.cpp  SoundStream.h  WaveFile.cpp  WaveFile.h  XAudio2Stream.cpp  XAudio2Stream.h  XAudio2_7Stream.cpp  XAudio2_7Stream.h  aldlist.cpp  aldlist.h  stdafx.h
Source/Core/Common/: CMakeLists.txt  Common.vcxproj  Common.vcxproj.filters  SCMRevGen.vcxproj  SVNRevGen.vcxproj  x64Emitter.cpp  x64Emitter.h
Source/Core/Common/Src/: ArmABI.cpp  ArmCPUDetect.cpp  ArmEmitter.cpp  ArmEmitter.h  ArmThunk.cpp  Atomic_GCC.h  Atomic_Win32.h  BreakPoints.cpp  BreakPoints.h  CPUDetect.cpp  CPUDetect.h  ChunkFile.h  Common.h  CommonFuncs.h  CommonPaths.h  CommonTypes.h  ConsoleListener.cpp  ConsoleListener.h  Emitter.h  FPURoundMode.h  FPURoundModeGeneric.cpp  FPURoundModeX86.cpp  FifoQueue.h  FileSearch.cpp  FileSearch.h  FileUtil.cpp  FileUtil.h  Gekko.cpp  Gekko.h  Hash.cpp  Hash.h  IniFile.cpp  IniFile.h  IntrusiveList.h  LinearDiskCache.h  Log.h  LogManager.cpp  LogManager.h  MathUtil.cpp  MathUtil.h  (+40 more)
Source/Core/Core/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  Core.cpp  Core.vcxproj  Core.vcxproj.filters
Source/Core/Core/HW/: AudioInterface.cpp  AudioInterface.h  DSP.cpp  DSP.h  DVDInterface.cpp  DVDInterface.h  EXI.h  EXI_Channel.h  MMIO.cpp  MMIO.h  MMIOHandlers.h  Memmap.h  MemoryInterface.cpp  MemoryInterface.h  ProcessorInterface.cpp  ProcessorInterface.h  SI.cpp  SI.h  VideoInterface.cpp  VideoInterface.h  WII_IPC.cpp  WII_IPC.h
Source/Core/Core/IPC_HLE/: WII_IPC_HLE.cpp
Source/Core/Core/Src/: ActionReplay.cpp  ActionReplay.h  ArmMemTools.cpp  BootManager.cpp  BootManager.h  ConfigManager.cpp  ConfigManager.h  Console.cpp  Core.cpp  Core.h  CoreParameter.cpp  CoreParameter.h  CoreTiming.cpp  GeckoCode.cpp  GeckoCodeConfig.cpp  Host.h  IOSync.cpp  IOSync.h  IOSyncBackends.cpp  IOSyncBackends.h  MemTools.cpp  Movie.cpp  Movie.h  NetPlay.h  NetPlayClient.cpp  NetPlayClient.h  NetPlayProto.h  NetPlayServer.cpp  NetPlayServer.h  PatchEngine.cpp  PatchEngine.h  State.cpp  State.h  stdafx.h  x64MemTools.cpp
Source/Core/DiscIO/: CMakeLists.txt  DiscIO.vcxproj  DiscIO.vcxproj.filters  VolumeCreator.cpp  VolumeElf.cpp  VolumeElf.h
Source/Core/DiscIO/Src/: BannerLoaderWii.cpp  CompressedBlob.cpp  DiscScrubber.cpp  FileMonitor.cpp  FileMonitor.h  FileSystemGCWii.cpp  Volume.h  VolumeWad.cpp  VolumeWad.h  VolumeWiiCrypted.cpp  VolumeWiiCrypted.h  WiiWad.cpp  stdafx.h
Source/Core/DolphinQt/: CMakeLists.txt
Source/Core/DolphinQt/Src/: GameList.cpp  ISOFile.cpp  ISOFile.h  MainWindowEvents.cpp  main.cpp
Source/Core/DolphinWX/: CMakeLists.txt  Dolphin.vcxproj  Dolphin.vcxproj.filters  DolphinWX.vcxproj  DolphinWX.vcxproj.filters  Frame.cpp  FrameTools.cpp  GameListCtrl.cpp  Globals.h  ISOFile.cpp  ISOFile.h
Source/Core/DolphinWX/GLInterface/: AGL.cpp  EGL.cpp  EGL.h  WGL.cpp
Source/Core/DolphinWX/Src/: ARCodeAddEdit.cpp  AboutDolphin.cpp  CLI.cpp  CLI.h  CheatsWindow.cpp  CheatsWindow.h  ConfigMain.cpp  ConfigMain.h  Frame.cpp  Frame.h  FrameAui.cpp  (+35 more)
Source/Core/InputCommon/: CMakeLists.txt  InputCommon.vcxproj  InputCommon.vcxproj.filters
Source/Core/VideoBackends/: CMakeLists.txt
Source/Core/VideoCommon/: BPFunctions.cpp  BPStructs.cpp  CMakeLists.txt  ConstantManager.cpp  ConstantManager.h  Constants.h  DriverDetails.cpp  DriverDetails.h  LightingShaderGen.h  NativeVertexFormat.h  PixelShaderGen.cpp  PixelShaderGen.h  PixelShaderManager.cpp  TextureConversionShader.cpp  VertexLoader.cpp  VertexLoaderManager.cpp  VertexManagerBase.cpp  VertexShaderGen.cpp  VertexShaderGen.h  VertexShaderManager.cpp  VideoBackendBase.cpp  VideoCommon.vcxproj  VideoCommon.vcxproj.filters  VideoState.cpp  XFStructs.cpp
Source/DSPSpy/: Stubs.cpp
Source/DSPTool/: DSPTool.vcxproj
Source/DSPTool/Src/: DSPTool.cpp
Source/Plugins/Plugin_VideoDX11/: Plugin_VideoDX11.vcxproj  Plugin_VideoDX11.vcxproj.filters
Source/Plugins/Plugin_VideoDX9/: Plugin_VideoDX9.vcxproj  Plugin_VideoDX9.vcxproj.filters
Source/Plugins/Plugin_VideoOGL/: CMakeLists.txt  Plugin_VideoOGL.vcxproj  Plugin_VideoOGL.vcxproj.filters
Source/Plugins/Plugin_VideoSoftware/: CMakeLists.txt  Plugin_VideoSoftware.vcxproj
Source/TestSuite/: TestSuite.sln
Source/TestSuite/ARAM/: ARAM.vcxproj
Source/TestSuite/ASM/: ASM.vcxproj
Source/TestSuite/AX/: AX.vcxproj
Source/TestSuite/EXI/: EXI.vcxproj
Source/TestSuite/FPU/: FPU.vcxproj
Source/TestSuite/GX/: GX.vcxproj
Source/TestSuite/PAD/: Makefile  PAD.vcxproj
Source/TestSuite/RTC/: RTC.vcxproj
Source/TestSuite/SI/: SI.vcxproj
Source/TestSuite/WPAD/: Makefile  WPAD.vcxproj
Source/TestSuite/WRTC/: WRTC.vcxproj
Source/TestSuite/WSD/: WSD.vcxproj
Source/UnitTests/: DSPJitTester.cpp  UnitTests.cpp  UnitTests.vcxproj
Source/VSProps/: Base.props  CodeGen_Debug.props  CodeGen_Release.props  CopyExePdbToBinaryDir.targets  Dolphin.Win32.props  Dolphin.x64.props  TestSuite.props  Video.props  WXWOverrides.props
(+517 files in other folders)
